--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   --light-black-03: rgba(77, 77, 77, 0.3);
   --soft-gray: #D5D5D5;
   --border-gray: #C1C1C1;
+  --dot-gray: #ababab;
   --med-light-gray: #DFDFDF;
   --basic-extra-light: #EEEEEE;
   --extra-gray: #A6A6A6;
@@ -127,12 +128,25 @@ img {
 }
 
 .site-navigation-item {
+  position: relative;
+  display: block;
   margin-right: 45px;
+  text-transform: uppercase;
+}
+
+.site-navigation-item-active::after {
+  content: "";
+  position: absolute;
+  top: 45px;
+  left: 0;
+  border-bottom: 2px solid var(--red-light);
+  width: 100%;
 }
 
 .site-navigation-item:last-child {
   margin-right: 0;
   margin-left: auto;
+  padding-left: 40px;
   position: relative;
 }
 
@@ -140,7 +154,7 @@ img {
   content: "";
   position: absolute;
   top: 8px;
-  left: -40px;
+  left: 0px;
   width: 15px;
   height: 15px;
   background-image: url("../img/cart-icon.svg");
@@ -184,19 +198,19 @@ img {
 .feature-item-first {
   background-image: url("../img/nerds-index-slide1.png");
   background-repeat: no-repeat;
-  background-position: bottom right; 
+  background-position: bottom right;
 }
 
 .feature-item-second {
   background-image: url("../img/nerds-index-slide2.png");
   background-repeat: no-repeat;
-  background-position: bottom right; 
+  background-position: bottom right;
 }
 
 .feature-item-third {
   background-image: url("../img/nerds-index-slide3.png");
   background-repeat: no-repeat;
-  background-position: bottom right; 
+  background-position: bottom right;
 }
 
 
@@ -231,7 +245,7 @@ img {
   justify-content: space-between;
   left: 50%;
   top: 75%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 .slider-button {
@@ -249,7 +263,7 @@ img {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 
   width: 8px;
   height: 8px;
@@ -517,7 +531,7 @@ img {
 }
 
 
-.clients-item:first-child::after {
+.clients-item:nth-child(4n+1)::after {
   border-left: none;
 }
 
@@ -738,10 +752,19 @@ img {
   margin: 0;
 }
 
-.filter-price {
-  margin-bottom: 54px;
+.filter-margin {
+  margin-bottom: 14px;
+}
+
+.filter-group {
+  margin: 0;
+
   padding: 0;
   border: none;
+}
+
+.filter-price {
+  margin-bottom: 54px;
 }
 
 .range-filter {
@@ -757,31 +780,42 @@ img {
   padding-bottom: 39px;
   padding-right: 20px;
   padding-left: 20px;
-  background-color: #f1f1f1;
+  background-color: var(--basic-extra-light);
   border-radius: 5px;
 }
+
 .range-controls .scale {
   height: 2px;
-  background: #d7dcde;
+  background: var(--white-gray);
 }
 
 .range-controls .bar {
   width: 70%;
   height: 2px;
-  background: #00ca74;
+  background: var(--green-light);
 }
 
 .range-controls .toggle {
   position: absolute;
-  top: 31px;
-  left: 0;
+  top: 29px;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: var(--basic-white);
+  border-radius: 50%;
+  box-shadow: 0px 2px 1px var(--basic-black-015);
+}
+
+.range-controls .toggle::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   width: 4px;
   height: 4px;
-  padding: 0;
-  border: 8px solid #ffffff;
-  background-color: #ababab;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 #cfcfcf;
+  border: 2px solid var(--dot-gray);
 }
 
 .range-controls .toggle-min {
@@ -808,18 +842,15 @@ img {
   padding: 10px;
   margin-left: 10px;
   text-align: center;
-  color: #283136;
+  color: var(--basic-dark);
   border: none;
   border-radius: 5px;
-  background: #f1f1f1;
   font-family: inherit;
   font-size: inherit;
 }
 
-
 .filter-grid {
   margin-bottom: 43px;
-  border: none;
 }
 
 .checkbox-list {
@@ -836,7 +867,6 @@ img {
 
 .radio-item {
   margin-bottom: 15px;
-  padding-left: 45px;
 }
 
 .radio-item label {
@@ -845,19 +875,20 @@ img {
 }
 
 .checkbox-item {
-  margin-bottom: 15px;
-  padding-left: 45px;
+  margin-bottom: 17px;
 }
 
-.checkbox-item label {
+.filter-checkbox {
   position: relative;
   display: block;
+  padding-left: 45px;
+  cursor: pointer;
 }
 
-.filter-input-checkbox + label::before {
+.filter-checkbox::before {
   content: "";
   position: absolute;
-  left: -45px;
+  left: 0px;
   top: 0;
   width: 23px;
   height: 23px;
@@ -867,61 +898,35 @@ img {
   background-position: 0 0;
 }
 
-.filter-input-checkbox:checked + label::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -46px;
-  width: 25px;
-  height: 23px;
-  background-image: url("../img/checkbox-on-black.svg");
-  opacity: 0.3;
-  background-repeat: no-repeat;
-  background-position: 0 0;
+.filter-checkbox:hover::before {
+  opacity: 1;
 }
 
-.filter-input-checkbox:hover + label::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -46px;
-  width: 25px;
-  height: 23px;
-  background-image: url("../img/checkbox-off-black.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-
-.filter-input-checkbox:hover + label::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -46px;
-  width: 25px;
-  height: 23px;
-  background-image: url("../img/checkbox-on-black.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-
-.filter-input-checkbox:active + label::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -46px;
-  width: 25px;
-  height: 23px;
-  background-image: url("../img/checkbox-on-black.svg");
+.filter-checkbox:active {
   opacity: 0.1;
-  background-repeat: no-repeat;
-  background-position: 0 0;
 }
 
-.filter-input-radio + label::before {
+.filter-checkbox:active::before {
+  opacity: 0.1;
+}
+
+.filter-input-checkbox:checked+.filter-checkbox::before {
+  width: 25px;
+  background-image: url("../img/checkbox-on-black.svg");
+}
+
+.filter-radio {
+  position: relative;
+  display: block;
+  padding-left: 45px;
+  cursor: pointer;
+}
+
+.filter-radio::before {
   content: "";
   position: absolute;
-  left: -42px;
-  top: -1px;
+  left: 0px;
+  top: 0px;
   width: 25px;
   height: 25px;
   background-image: url("../img/radio-off-black.svg");
@@ -930,47 +935,24 @@ img {
   background-position: 0 0;
 }
 
-.filter-input-radio:checked + label::after {
-  content: "";
-  position: absolute;
-  left: -42px;
-  top: -1px;
-  width: 25px;
-  height: 25px;
-  background-image: url("../img/radio-on-black.svg");
-  opacity: 0.3;
-  background-repeat: no-repeat;
-  background-position: 0 0;
+.filter-radio:hover::before {
+  opacity: 1;
 }
 
-.filter-input-radio:hover + label::after {
-  content: "";
-  position: absolute;
-  left: -42px;
-  top: -1px;
-  width: 25px;
-  height: 25px;
-  background-image: url("../img/radio-on-black.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-
-.filter-input-radio:active + label::after {
-  content: "";
-  position: absolute;
-  left: -42px;
-  top: -1px;
-  width: 25px;
-  height: 25px;
-  background-image: url("../img/radio-on-black.svg");
+.filter-radio:active {
   opacity: 0.1;
-  background-repeat: no-repeat;
-  background-position: 0 0;
+}
+
+.filter-radio:active::before {
+  opacity: 0.1;
+}
+
+.filter-input-radio:checked+.filter-radio::before {
+  background-image: url("../img/radio-on-black.svg");
 }
 
 .filter-excellence {
   margin-bottom: 48px;
-  border: none;
 }
 
 .filter-name {
@@ -1007,26 +989,31 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-left: 47px;
   display: flex;
   flex-wrap: wrap;
   gap: 18px;
 }
 
-.sort-button:hover path {
-  fill: var(--extra-gray);
+.sort-button {
+  color: var(--extra-gray);
+  opacity: 0.2;
+}
+
+.sort-button-active {
+  color: var(--extra-black);
   opacity: 1;
 }
 
-.sort-button:active path {
-  fill: var(--extra-black);
+.sort-button:hover,
+.sort-button:focus {
   opacity: 1;
 }
 
-.sort-button:focus path {
-  fill: var(--extra-black);
+.sort-button:active {
+  color: var(--extra-black);
   opacity: 1;
 }
-
 
 .sort-title {
   margin: 0;
@@ -1041,28 +1028,36 @@ img {
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-end;
+  text-transform: uppercase;
 }
 
 .sort-type {
   font-size: 14px;
   line-height: 18px;
-  gap: 25px;
   color: var(--basic-black-03);
 }
 
-.sort-type:last-child {
-  margin-right: 47px;
+.sort-type-active {
+  color: var(--basic-black);
 }
+
+.sort-place {
+  margin-right: 25px;
+}
+
+.sort-place:last-child {
+  margin-right: 0;
+}
+
 
 .sort-type:hover {
   color: var(--basic-black-06);
 }
 
 .sort-type:active {
-  font-size: 14px;
-  line-height: 18px;
   color: var(--basic-black);
 }
+
 
 .example-list {
   list-style: none;
@@ -1075,16 +1070,13 @@ img {
   grid-column-gap: 42px;
 }
 
-.example-item {
-  position: relative;
-}
-
 .example-item::before {
   content: "";
-  position: absolute;
+  display: block;
   top: 0;
-  margin-bottom: 40px;
-  width: 360px;
+  left: 140px;
+  right: 40px;
+  width: 100%;
   height: 40px;
   background-image: url("../img/browser.svg");
   opacity: 0.12;
@@ -1092,16 +1084,10 @@ img {
   background-position: 0 0;
 }
 
-.example-item:hover::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  margin-bottom: 40px;
-  bottom: -40px;
-  width: 360px;
-  height: 40px;
+.example-item:hover::before {
   background-image: url("../img/browser.svg");
   background-repeat: no-repeat;
+  opacity: 1;
   background-position: 0 0;
 }
 
@@ -1162,6 +1148,9 @@ img {
 }
 
 .pagination-link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
   border: none;
@@ -1180,7 +1169,7 @@ img {
   box-shadow: inset 0 3px 0 var(--shadow-1);
 }
 
-.pagination-link:disabled {
+.pagination-link-active {
   color: var(--basic-black);
   background-color: var(--basic-white);
   border: 3px solid var(--extra-light-gray);
