--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,8 @@ img {
   opacity: 0.2;
 }
 
-.clients-link:hover {
+.clients-link:hover,
+.clients-link:focus {
   background-color: var(--basic-white);
   opacity: 1;
 }
@@ -645,12 +646,14 @@ img {
   height: 81px;
 }
 
-.social-button:hover {
+.social-button:hover,
+.social-button:focus {
   background-color: var(--red);
 }
 
 .social-button:active {
   background-color: var(--red-dark);
+  box-shadow: inset 0 3px 0 0 var(--shadow-1);
 }
 
 .social-button:active path {
@@ -681,6 +684,7 @@ img {
 /* Appointment */
 
 .modal {
+  display: none;
   position: fixed;
   left: 50%;
   top: 50%;
@@ -692,6 +696,9 @@ img {
   padding-left: 100px;
   padding-right: 100px;
   box-shadow: 0px 20px 40px var(--basic-black-04);
+  -webkit-overflow-scrolling: touch;
+  overflow-y: auto;
+  width: 960px;
 }
 
 .modal-description {
@@ -699,7 +706,6 @@ img {
   line-height: 53px;
   font-weight: 700;
   margin: 0;
-  padding: 0;
   margin-bottom: 37px;
 }
 
@@ -719,15 +725,12 @@ img {
   line-height: 18px;
   border: 2px solid var(--white-gray);
   color: var(--basic-dark-gray-05);
-  margin: 0;
-  padding: 0;
+  padding: 16px;
   margin-bottom: 34px;
   min-width: 360px;
   min-height: 50px;
   display: block;
-  padding-top: 16px;
-  padding-left: 16px;
-  padding-bottom: 16px
+  outline: 0;
 }
 
 .form-input:hover {
@@ -740,8 +743,8 @@ img {
 }
 
 .form-input:active {
-  border: 2px solid var(--basic-black);
-  color: var(--basic-dark-gray);
+  border: 2px solid var(--basic-dark-gray);
+  color: var(--basic-black);
 }
 
 .field-input-error {
@@ -749,13 +752,47 @@ img {
   color: var(--red);
 }
 
+.field-input-error:hover,
+.field-input-error:focus {
+  border: 2px solid var(--red);
+  color: var(--red);
+}
+
+.field-input-error:hover::placeholder,
+.field-input-error:focus::placeholder {
+  color: var(--red);
+}
+
+input::placeholder {
+  color: var(--basic-dark-gray-05);
+}
+
+input:hover::placeholder {
+  color: var(--basic-dark-gray-05);
+}
+
+input:focus::placeholder {
+  color: var(--basic-dark-gray);
+}
+
+input:active::placeholder {
+  color: var(--basic-black);
+}
+
+.form-label {
+  margin-bottom: 9px;
+}
+
 .form textarea {
   background-color: transparent;
   font-size: 16px;
   line-height: 18px;
-  min-width: 760px;
+  width: 760px;
+  max-width: 100%;
   min-height: 118px;
+  max-height: 118px;
   margin-bottom: 47px;
+  outline: 0;
 }
 
 .form-field {
@@ -765,7 +802,6 @@ img {
 }
 
 .modal-close {
-  content: "";
   position: absolute;
   top: 78px;
   right: 90px;
@@ -818,7 +854,6 @@ img {
 
 .filter-group {
   margin: 0;
-
   padding: 0;
   border: none;
 }
@@ -1144,7 +1179,8 @@ img {
   overflow: hidden;
 }
 
-.example-item:hover {
+.example-item:hover,
+.example-item:focus-within {
   box-shadow: 0 6px 15px var(--basic-black-025);
 }
 
@@ -1170,9 +1206,15 @@ img {
 }
 
 
+.example-item:focus-within::before {
+  background-image: url("../img/browser.svg");
+  background-repeat: no-repeat;
+  opacity: 1;
+  background-position: 0 0;
+}
+
 .example-title {
   margin: 0;
-  padding: 0;
   margin-bottom: 12px;
 }
 
@@ -1184,7 +1226,8 @@ img {
   font-weight: 700;
 }
 
-.example-title a:hover {
+.example-title a:hover,
+.example-title a:focus-within {
   color: var(--red-light);
 }
 
@@ -1206,12 +1249,10 @@ img {
   display: none;
 }
 
-.example-item:hover .example-cover {
-  content: "";
+.example-item:hover .example-cover,
+.example-item:focus-within .example-cover {
   position: absolute;
   display: block;
-  margin: 0;
-  padding: 0;
   padding: 26px 26px 44px 26px;
   width: 100%;
   text-align: center;
@@ -1300,7 +1341,7 @@ img {
 .price-range {
   background-color: var(--basic-extra-light);
   color: var(--basic-white);
-  box-shadow: 0 2px var(--basic-black-015);
+  box-shadow: 0 2px 1px var(--basic-black-015);
 }
 
 .filter-form-text {
